# APEX-EXCHANGE

./: .gitignore  CMakeLists.txt  README.md  architecture.md  ci.yml  deployment.yaml  docker-compose.yml  load_tester.py  test_order_book.cpp
ai_agents/: manipulation_detector.py  rl_trader.py
analytics/: analytics_engine.py
deployment/docker/: Dockerfile.engine  Dockerfile.python
engine/: matching_engine.hpp  order_book.cpp  order_book.hpp
services/order_service/: order_service.py
services/risk_service/: risk_engine.py
simulator/: market_simulator.py
